# BatStat

./: Cargo.toml  DEVICELIST.md  README.md  resources.rc  steelseries_arctis_nova_7.hpp
.agents/skills/batstat-device-onboarder/: SKILL.md
.agents/skills/batstat-device-onboarder/scripts/: list_devices.rs  probe_device.rs
.github/workflows/: release.yml
src/: autostart.rs  config.rs  main.rs  ui.rs  updater.rs
src/plugins/: logitech.rs  mod.rs  pulsar.rs  steelseries.rs  xbox.rs
wix/: License.rtf  main.wxs
