[package]
name = "batstat"
version = "1.2.0"
edition = "2021"
description = "A lightweight Windows battery monitor for peripherals in the system tray"
authors = ["SGiehler"]
license = "MIT"
repository = "https://github.com/SGiehler/BatStat"
homepage = "https://github.com/SGiehler/BatStat"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
hidapi = "2.6.3"
windows-sys = { version = "0.59.0", features = [
    "Win32_UI_Input_XboxController",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security"
] }
eframe = "0.29.1"
tray-icon = "0.19"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
notify-rust = "4.11"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.58.0", features = [
    "Gaming_Input",
    "Devices_Power",
    "System_Power",
    "Foundation_Collections",
] }

[build-dependencies]
embed-resource = "2.4"

